adjustment in header and anggota
- add some images to local

--- a/index.html
+++ b/index.html
@@ -195,17 +195,17 @@
                                 <div class="carousel-inner">
                                     <div class="carousel-item active slider-500">
                                         <a href="#">
-                                            <img src="https://via.placeholder.com/500x500" class="d-block w-100 m-auto" />
+                                            <img src="./assets/img/500x500.png" class="d-block w-100 m-auto" />
                                         </a>
                                     </div>
                                     <div class="carousel-item slider-500">
                                         <a href="#">
-                                            <img src="https://via.placeholder.com/500x500" class="d-block w-100 m-auto" />
+                                            <img src="./assets/img/500x500.png" class="d-block w-100 m-auto" />
                                         </a>
                                     </div>
                                     <div class="carousel-item slider-500">
                                         <a href="#">
-                                            <img src="https://via.placeholder.com/500x500" class="d-block w-100 m-auto" />
+                                            <img src="./assets/img/500x500.png" class="d-block w-100 m-auto" />
                                         </a>
                                     </div>
                                 </div>
@@ -229,17 +229,17 @@
                                 <div class="carousel-inner">
                                     <div class="carousel-item active" class="slider-250" >
                                         <a href="#">
-                                            <img src="https://via.placeholder.com/500x250" class="d-block w-100" />
+                                            <img src="./assets/img/500x250.png" class="d-block w-100" />
                                         </a>
                                     </div>
                                     <div class="carousel-item" class="slider-250" >
                                         <a href="#">
-                                            <img src="https://via.placeholder.com/500x250" class="d-block w-100" />
+                                            <img src="./assets/img/500x250.png" class="d-block w-100" />
                                         </a>
                                     </div>
                                     <div class="carousel-item" class="slider-250" >
                                         <a href="#">
-                                            <img src="https://via.placeholder.com/500x250" class="d-block w-100" />
+                                            <img src="./assets/img/500x250.png" class="d-block w-100" />
                                         </a>
                                     </div>
                                 </div>
@@ -261,17 +261,17 @@
                                 <div class="carousel-inner">
                                     <div class="carousel-item active" class="slider-250" >
                                         <a href="#">
-                                            <img src="https://via.placeholder.com/500x250" class="d-block w-100" />
+                                            <img src="./assets/img/500x250.png" class="d-block w-100" />
                                         </a>
                                     </div>
                                     <div class="carousel-item" class="slider-250" >
                                         <a href="#">
-                                            <img src="https://via.placeholder.com/500x250" class="d-block w-100" />
+                                            <img src="./assets/img/500x250.png" class="d-block w-100" />
                                         </a>
                                     </div>
                                     <div class="carousel-item" class="slider-250" >
                                         <a href="#">
-                                            <img src="https://via.placeholder.com/500x250" class="d-block w-100" />
+                                            <img src="./assets/img/500x250.png" class="d-block w-100" />
                                         </a>
                                     </div>
                                 </div>
@@ -295,17 +295,17 @@
                                 <div class="carousel-inner">
                                     <div class="carousel-item active" class="slider-250" >
                                         <a href="#">
-                                            <img src="https://via.placeholder.com/500x250" class="d-block w-100" />
+                                            <img src="./assets/img/500x250.png" class="d-block w-100" />
                                         </a>
                                     </div>
                                     <div class="carousel-item" class="slider-250" >
                                         <a href="#">
-                                            <img src="https://via.placeholder.com/500x250" class="d-block w-100" />
+                                            <img src="./assets/img/500x250.png" class="d-block w-100" />
                                         </a>
                                     </div>
                                     <div class="carousel-item" class="slider-250" >
                                         <a href="#">
-                                            <img src="https://via.placeholder.com/500x250" class="d-block w-100" />
+                                            <img src="./assets/img/500x250.png" class="d-block w-100" />
                                         </a>
                                     </div>
                                 </div>
@@ -327,17 +327,17 @@
                                 <div class="carousel-inner">
                                     <div class="carousel-item active" class="slider-250" >
                                         <a href="#">
-                                            <img src="https://via.placeholder.com/500x250" class="d-block w-100" />
+                                            <img src="./assets/img/500x250.png" class="d-block w-100" />
                                         </a>
                                     </div>
                                     <div class="carousel-item" class="slider-250" >
                                         <a href="#">
-                                            <img src="https://via.placeholder.com/500x250" class="d-block w-100" />
+                                            <img src="./assets/img/500x250.png" class="d-block w-100" />
                                         </a>
                                     </div>
                                     <div class="carousel-item" class="slider-250" >
                                         <a href="#">
-                                            <img src="https://via.placeholder.com/500x250" class="d-block w-100" />
+                                            <img src="./assets/img/500x250.png" class="d-block w-100" />
                                         </a>
                                     </div>
                                 </div>
@@ -357,7 +357,7 @@
             <div class="row row-cols-4">
                 <div class="col-12 col-md-3 p-0">
                     <div class="container-overlay" data-bs-toggle="popover" data-bs-title="Tentang Perkindo" data-bs-content-id="popover-tentang-perkindo-content">
-                        <img src="https://via.placeholder.com/250x150" class="card-img" alt="..." />
+                        <img src="./assets/img/250x150.png" class="card-img" alt="..." />
                         <div class="content-overlay bg-odd">
                             <div class="header-popover-container d-flex justify-content-center align-items-center h-100 text-center">
                                 <h1 class="text-uppercase fw-bold">tentang perkindo</h1>
@@ -367,7 +367,7 @@
                 </div>
                 <div class="col-12 col-md-3 p-0">
                     <div class="container-overlay" data-bs-toggle="popover" data-bs-title="Keanggotaan" data-bs-content-id="popover-keanggotaan-content">
-                        <img src="https://via.placeholder.com/250x150" class="card-img" alt="..." />
+                        <img src="./assets/img/250x150.png" class="card-img" alt="..." />
                         <div class="content-overlay bg-even">
                             <div class="header-popover-container d-flex justify-content-center align-items-center h-100 text-center">
                                 <h1 class="text-uppercase fw-bold">keanggotaan</h1>
@@ -377,7 +377,7 @@
                 </div>
                 <div class="col-12 col-md-3 p-0">
                     <div class="container-overlay" data-bs-toggle="popover" data-bs-title="Sertifikasi" data-bs-content-id="popover-sertifikasi-content">
-                        <img src="https://via.placeholder.com/250x150" class="card-img" alt="..." />
+                        <img src="./assets/img/250x150.png" class="card-img" alt="..." />
                         <div class="content-overlay bg-odd">
                             <div class="header-popover-container d-flex justify-content-center align-items-center h-100 text-center">
                                 <h1 class="text-uppercase fw-bold">sertifikasi</h1>
@@ -387,7 +387,7 @@
                 </div>
                 <div class="col-12 col-md-3 p-0">
                     <div class="container-overlay" data-bs-toggle="popover" data-bs-title="Bisnis" data-bs-content-id="popover-bisnis-content">
-                        <img src="https://via.placeholder.com/250x150" class="card-img" alt="..." />
+                        <img src="./assets/img/250x150.png" class="card-img" alt="..." />
                         <div class="content-overlay bg-even">
                             <div class="header-popover-container d-flex justify-content-center align-items-center h-100 text-center">
                                 <h1 class="text-uppercase fw-bold">bisnis</h1>
@@ -415,7 +415,7 @@
                             <div class="card-body p-5">
                                 <div class="row">
                                     <div class="col-lg-6">
-                                        <div class="d-flex flex-column justify-content-center align-items-center h-100 px-2 px-lg-5 mx-lg-5 mb-3 mb-lg-0">
+                                        <div class="d-flex flex-column justify-content-center align-items-center h-100 mx-lg-5 mb-3 mb-lg-0">
                                             <h1 class="text-uppercase card-slider-title">perkindo</h1>
                                             <h2 class="text-uppercase card-slider-subtitle">unggul berdaya saing</h2>
                                             <div class="horizontal-line my-3 mb-4"></div>
@@ -441,7 +441,7 @@
                             <div class="card-body p-5">
                                 <div class="row">
                                     <div class="col-lg-6">
-                                        <div class="d-flex flex-column justify-content-center align-items-center h-100 px-5 mx-lg-5 mb-3 mb-lg-0">
+                                        <div class="d-flex flex-column justify-content-center align-items-center h-100 mx-lg-5 mb-3 mb-lg-0">
                                             <h1 class="text-uppercase card-slider-title">perkindo</h1>
                                             <h2 class="text-uppercase card-slider-subtitle">unggul berdaya saing</h2>
                                             <div class="horizontal-line my-3 mb-4"></div>
@@ -467,7 +467,7 @@
                             <div class="card-body p-5">
                                 <div class="row">
                                     <div class="col-lg-6">
-                                        <div class="d-flex flex-column justify-content-center align-items-center h-100 px-5 mx-lg-5 mb-3 mb-lg-0">
+                                        <div class="d-flex flex-column justify-content-center align-items-center h-100 mx-lg-5 mb-3 mb-lg-0">
                                             <h1 class="text-uppercase card-slider-title">perkindo</h1>
                                             <h2 class="text-uppercase card-slider-subtitle">unggul berdaya saing</h2>
                                             <div class="horizontal-line my-3 mb-4"></div>
@@ -493,7 +493,7 @@
                             <div class="card-body p-5">
                                 <div class="row">
                                     <div class="col-lg-6">
-                                        <div class="d-flex flex-column justify-content-center align-items-center h-100 px-5 mx-lg-5 mb-3 mb-lg-0">
+                                        <div class="d-flex flex-column justify-content-center align-items-center h-100 mx-lg-5 mb-3 mb-lg-0">
                                             <h1 class="text-uppercase card-slider-title">perkindo</h1>
                                             <h2 class="text-uppercase card-slider-subtitle">unggul berdaya saing</h2>
                                             <div class="horizontal-line my-3 mb-4"></div>
@@ -519,7 +519,7 @@
                             <div class="card-body p-5">
                                 <div class="row">
                                     <div class="col-lg-6">
-                                        <div class="d-flex flex-column justify-content-center align-items-center h-100 px-5 mx-lg-5 mb-3 mb-lg-0">
+                                        <div class="d-flex flex-column justify-content-center align-items-center h-100 mx-lg-5 mb-3 mb-lg-0">
                                             <h1 class="text-uppercase card-slider-title">perkindo</h1>
                                             <h2 class="text-uppercase card-slider-subtitle">unggul berdaya saing</h2>
                                             <div class="horizontal-line my-3 mb-4"></div>
