--- a/index.html
+++ b/index.html
@@ -676,8 +676,10 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-lg-6 d-flex flex-column p-0 mt-3 mt-lg-0">
-                    <span class="text-uppercase fw-bold me-auto horizontal-line-2 m-2 ptmk-title">peluang tender</span>
-                    <div class="row w-100 m-0">
+                    <div class="text-center text-sm-start m-2 mb-3">
+                        <span class="text-uppercase fw-bold me-auto horizontal-line-2 ptmk-title">peluang tender</span>
+                    </div>
+                    <div class="row m-0">
                         <div class="col-6 col-lg-3 p-0">
                             <div class="container-overlay">
                                 <img src="./assets/img/kementrian.png" class="card-img" alt="..." />
@@ -723,45 +725,58 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-lg-6 d-flex flex-column p-0 mt-3 mt-lg-0">
-                    <div class="text-uppercase fw-bold me-auto horizontal-line-2 m-2 ptmk-title">mitra kerja</div>
-                    <div class="row w-100 m-0">
-                        <div class="col-6 col-lg-3 p-0">
-                            <div class="container-overlay">
-                                <img src="./assets/img/asosiasi.png" class="card-img" alt="..." />
-                                <div class="content-overlay bg-even">
-                                    <div class="d-flex justify-content-center align-items-center h-100 text-center">
-                                        <span class="text-uppercase fw-bold text-light ptmk-entry">asosiasi bu / profesi</span>
+                <div class="col-12 col-lg-6">
+                    <div class="row">
+                        <div class="col-12 col-lg-6 d-flex flex-column p-0 mt-3 mt-lg-0">
+                            <div class="text-center text-sm-start m-2 mb-3 ms-lg-0">
+                                <span class="text-uppercase fw-bold me-auto horizontal-line-2 ptmk-title">mitra kerja</span>
+                            </div>
+                            <div class="row m-0">
+                                <div class="col-6 p-0">
+                                    <div class="container-overlay">
+                                        <img src="./assets/img/asosiasi.png" class="card-img" alt="..." />
+                                        <div class="content-overlay bg-even">
+                                            <div class="d-flex justify-content-center align-items-center h-100 text-center">
+                                                <span class="text-uppercase fw-bold text-light ptmk-entry">asosiasi bu / profesi</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-6 p-0">
+                                    <div class="container-overlay">
+                                        <img src="./assets/img/pergruan.png" class="card-img" alt="..." />
+                                        <div class="content-overlay bg-odd">
+                                            <div class="d-flex justify-content-center align-items-center h-100 text-center">
+                                                <span class="text-uppercase fw-bold text-light ptmk-entry">perguruan tinggi</span>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 col-lg-3 p-0">
-                            <div class="container-overlay">
-                                <img src="./assets/img/pergruan.png" class="card-img" alt="..." />
-                                <div class="content-overlay bg-odd">
-                                    <div class="d-flex justify-content-center align-items-center h-100 text-center">
-                                        <span class="text-uppercase fw-bold text-light ptmk-entry">perguruan tinggi</span>
+                        <div class="col-12 col-lg-6 d-flex flex-column p-0 mt-3 mt-lg-0">
+                            <div class="text-center text-sm-start m-2 mb-3 ms-lg-0">
+                                <span class="text-uppercase fw-bold me-auto horizontal-line-2 ptmk-title">mitra kerja</span>
+                            </div>
+                            <div class="row m-0">
+                                <div class="col-6 p-0">
+                                    <div class="container-overlay">
+                                        <img src="./assets/img/peraturan.png" class="card-img" alt="..." />
+                                        <div class="content-overlay bg-even">
+                                            <div class="d-flex justify-content-center align-items-center h-100 text-center">
+                                                <span class="text-uppercase fw-bold text-light ptmk-entry">peraturan</span>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="col-6 col-lg-3 p-0">
-                            <div class="container-overlay">
-                                <img src="./assets/img/peraturan.png" class="card-img" alt="..." />
-                                <div class="content-overlay bg-even">
-                                    <div class="d-flex justify-content-center align-items-center h-100 text-center">
-                                        <span class="text-uppercase fw-bold text-light ptmk-entry">peraturan</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-6 col-lg-3 p-0">
-                            <div class="container-overlay">
-                                <img src="./assets/img/refrensi.png" class="card-img" alt="..." />
-                                <div class="content-overlay bg-odd">
-                                    <div class="d-flex justify-content-center align-items-center h-100 text-center">
-                                        <span class="text-uppercase fw-bold text-light ptmk-entry">refrensi</span>
+                                <div class="col-6 p-0">
+                                    <div class="container-overlay">
+                                        <img src="./assets/img/refrensi.png" class="card-img" alt="..." />
+                                        <div class="content-overlay bg-odd">
+                                            <div class="d-flex justify-content-center align-items-center h-100 text-center">
+                                                <span class="text-uppercase fw-bold text-light ptmk-entry">refrensi</span>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
