--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                 <div class="col-12 col-md-6 col-lg-4 p-0">
                     <a class="text-dark" href="#">
                         <div class="container-overlay img-zoom-hover">
-                            <img src="./assets/img/497d4b4781b49762c3e1b67536ef4177.jpeg" alt="..." />
+                            <img src="./assets/img/497d4b4781b49762c3e1b67536ef4177.jpeg" alt="..." style="height: 347px" />
                             <div class="content-overlay">
                                 <div class="row row-cols-2 h-100 m-0">
                                     <div class="col p-0"></div>
@@ -575,7 +575,7 @@
                 <div class="col-12 col-md-6 col-lg-4 p-0">
                     <a class="text-dark" href="#">
                         <div class="container-overlay img-zoom-hover">
-                            <img src="./assets/img/0afa829997b558a080ec5d9b1609b285.jpeg" alt="..." />
+                            <img src="./assets/img/0afa829997b558a080ec5d9b1609b285.jpeg" alt="..." style="height: 347px" />
                             <div class="content-overlay">
                                 <div class="row row-cols-2 h-100 m-0">
                                     <div class="col p-0"></div>
@@ -593,7 +593,7 @@
                 <div class="col-12 col-md-6 col-lg-4 p-0">
                     <a class="text-dark" href="#">
                         <div class="container-overlay img-zoom-hover">
-                            <img src="./assets/img/497d4b4781b49762c3e1b67536ef4177.jpeg" alt="..." />
+                            <img src="./assets/img/497d4b4781b49762c3e1b67536ef4177.jpeg" alt="..." style="height: 347px" />
                             <div class="content-overlay">
                                 <div class="row row-cols-2 h-100 m-0">
                                     <div class="col p-0"></div>
@@ -611,7 +611,7 @@
                 <div class="col-12 col-md-6 col-lg-4 p-0">
                     <a class="text-dark" href="#">
                         <div class="container-overlay img-zoom-hover">
-                            <img src="./assets/img/0afa829997b558a080ec5d9b1609b285.jpeg" alt="..." />
+                            <img src="./assets/img/0afa829997b558a080ec5d9b1609b285.jpeg" alt="..." style="height: 347px" />
                             <div class="content-overlay">
                                 <div class="row row-cols-2 h-100 m-0">
                                     <div class="col p-0"></div>
@@ -629,7 +629,7 @@
                 <div class="col-12 col-md-6 col-lg-4 p-0">
                     <a class="text-dark" href="#">
                         <div class="container-overlay img-zoom-hover">
-                            <img src="./assets/img/9d1c7c19c8980bd30dd789e99fbe153d.jpeg" alt="..." />
+                            <img src="./assets/img/9d1c7c19c8980bd30dd789e99fbe153d.jpeg" alt="..." style="height: 347px" />
                             <div class="content-overlay">
                                 <div class="row row-cols-2 h-100 m-0">
                                     <div class="col p-0"></div>
@@ -647,7 +647,7 @@
                 <div class="col-12 col-md-6 col-lg-4 p-0">
                     <a class="text-dark" href="#">
                         <div class="container-overlay img-zoom-hover">
-                            <img src="./assets/img/0afa829997b558a080ec5d9b1609b285.jpeg" alt="..." />
+                            <img src="./assets/img/0afa829997b558a080ec5d9b1609b285.jpeg" alt="..." style="height: 347px" />
                             <div class="content-overlay">
                                 <div class="row row-cols-2 h-100 m-0">
                                     <div class="col p-0"></div>
@@ -681,7 +681,7 @@
                     </div>
                     <div class="row m-0">
                         <div class="col-6 col-lg-3 p-0">
-                            <div class="container-overlay">
+                            <div class="container-overlay img-zoom-hover">
                                 <img src="./assets/img/kementrian.png" class="card-img" alt="..." />
                                 <div class="content-overlay bg-even">
                                     <div class="d-flex justify-content-center align-items-center h-100 text-center">
@@ -691,7 +691,7 @@
                             </div>
                         </div>
                         <div class="col-6 col-lg-3 p-0">
-                            <div class="container-overlay">
+                            <div class="container-overlay img-zoom-hover">
                                 <img src="./assets/img/badan lembaga.png" class="card-img" alt="..." />
                                 <div class="content-overlay bg-odd">
                                     <div class="d-flex justify-content-center align-items-center h-100 text-center">
@@ -704,7 +704,7 @@
                             </div>
                         </div>
                         <div class="col-6 col-lg-3 p-0">
-                            <div class="container-overlay">
+                            <div class="container-overlay img-zoom-hover">
                                 <img src="./assets/img/bumn.png" class="card-img" alt="..." />
                                 <div class="content-overlay bg-even">
                                     <div class="d-flex justify-content-center align-items-center h-100 text-center">
@@ -714,7 +714,7 @@
                             </div>
                         </div>
                         <div class="col-6 col-lg-3 p-0">
-                            <div class="container-overlay">
+                            <div class="container-overlay img-zoom-hover">
                                 <img src="./assets/img/lembaga internasional.png" class="card-img" alt="..." />
                                 <div class="content-overlay bg-odd">
                                     <div class="d-flex justify-content-center align-items-center h-100 text-center">
@@ -733,7 +733,7 @@
                             </div>
                             <div class="row m-0">
                                 <div class="col-6 p-0">
-                                    <div class="container-overlay">
+                                    <div class="container-overlay img-zoom-hover">
                                         <img src="./assets/img/asosiasi.png" class="card-img" alt="..." />
                                         <div class="content-overlay bg-even">
                                             <div class="d-flex justify-content-center align-items-center h-100 text-center">
@@ -743,7 +743,7 @@
                                     </div>
                                 </div>
                                 <div class="col-6 p-0">
-                                    <div class="container-overlay">
+                                    <div class="container-overlay img-zoom-hover">
                                         <img src="./assets/img/pergruan.png" class="card-img" alt="..." />
                                         <div class="content-overlay bg-odd">
                                             <div class="d-flex justify-content-center align-items-center h-100 text-center">
@@ -756,11 +756,11 @@
                         </div>
                         <div class="col-12 col-lg-6 d-flex flex-column p-0 mt-3 mt-lg-0">
                             <div class="text-center text-sm-start m-2 mb-3 ms-lg-0">
-                                <span class="text-uppercase fw-bold me-auto horizontal-line-2 ptmk-title">mitra kerja</span>
+                                <span class="text-uppercase fw-bold me-auto horizontal-line-2 ptmk-title">informasi</span>
                             </div>
                             <div class="row m-0">
                                 <div class="col-6 p-0">
-                                    <div class="container-overlay">
+                                    <div class="container-overlay img-zoom-hover">
                                         <img src="./assets/img/peraturan.png" class="card-img" alt="..." />
                                         <div class="content-overlay bg-even">
                                             <div class="d-flex justify-content-center align-items-center h-100 text-center">
@@ -770,7 +770,7 @@
                                     </div>
                                 </div>
                                 <div class="col-6 p-0">
-                                    <div class="container-overlay">
+                                    <div class="container-overlay img-zoom-hover">
                                         <img src="./assets/img/refrensi.png" class="card-img" alt="..." />
                                         <div class="content-overlay bg-odd">
                                             <div class="d-flex justify-content-center align-items-center h-100 text-center">
