--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                                             <h1 class="text-uppercase card-slider-title">perkindo</h1>
                                             <h2 class="text-uppercase card-slider-subtitle">unggul berdaya saing</h2>
                                             <div class="horizontal-line my-3 mb-4"></div>
-                                            <p class="fw-bold card-slider-desc">
+                                            <p class="fw-bold" style="text-align: justify; color: #666">
                                                 Konsultan adalah ujung tombak pembangunan mulai dari gagasan, rancang bangun, manajemen pelaksanaan dan pengawasan hingga evaluasi Keberhasilan pembangunan sangat ditentukan oleh konsultan
                                                 yang berkualitas
                                             </p>
@@ -718,7 +718,7 @@
                                 <img src="./assets/img/lembaga internasional.png" class="card-img" alt="..." />
                                 <div class="content-overlay bg-odd">
                                     <div class="d-flex justify-content-center align-items-center h-100 text-center">
-                                        <span class="text-uppercase fw-bold text-light ptmk-entry __donor">lembaga internasional / donor fund</span>
+                                        <span class="text-uppercase fw-bold text-light ptmk-entry __donor">lembaga <span>internasional /</span> donor fund</span>
                                     </div>
                                 </div>
                             </div>
@@ -737,7 +737,7 @@
                                         <img src="./assets/img/asosiasi.png" class="card-img" alt="..." />
                                         <div class="content-overlay bg-even">
                                             <div class="d-flex justify-content-center align-items-center h-100 text-center">
-                                                <span class="text-uppercase fw-bold text-light ptmk-entry">asosiasi bu / profesi</span>
+                                                <span class="text-uppercase fw-bold text-light ptmk-entry __asosiasi">asosiasi badan usaha & profesi</span>
                                             </div>
                                         </div>
                                     </div>
@@ -747,7 +747,7 @@
                                         <img src="./assets/img/pergruan.png" class="card-img" alt="..." />
                                         <div class="content-overlay bg-odd">
                                             <div class="d-flex justify-content-center align-items-center h-100 text-center">
-                                                <span class="text-uppercase fw-bold text-light ptmk-entry">perguruan tinggi</span>
+                                                <span class="text-uppercase fw-bold text-light ptmk-entry __perguruan">perguruan tinggi</span>
                                             </div>
                                         </div>
                                     </div>
@@ -764,7 +764,7 @@
                                         <img src="./assets/img/peraturan.png" class="card-img" alt="..." />
                                         <div class="content-overlay bg-even">
                                             <div class="d-flex justify-content-center align-items-center h-100 text-center">
-                                                <span class="text-uppercase fw-bold text-light ptmk-entry">peraturan</span>
+                                                <span class="text-uppercase fw-bold text-light ptmk-entry __peraturan">peraturan</span>
                                             </div>
                                         </div>
                                     </div>
@@ -774,7 +774,7 @@
                                         <img src="./assets/img/refrensi.png" class="card-img" alt="..." />
                                         <div class="content-overlay bg-odd">
                                             <div class="d-flex justify-content-center align-items-center h-100 text-center">
-                                                <span class="text-uppercase fw-bold text-light ptmk-entry">refrensi</span>
+                                                <span class="text-uppercase fw-bold text-light ptmk-entry __referensi">refrensi</span>
                                             </div>
                                         </div>
                                     </div>
